# axum-rust

./: Cargo.toml
migrations/: 20240524003655_create_table_users.up.sql  20240524003711_create_table_roles.down.sql  20240524003711_create_table_roles.up.sql  20240524003719_create_table_user_roles.down.sql  20240524003719_create_table_user_roles.up.sql  20240524011251_insert_users.down.sql  20240524011251_insert_users.up.sql  20240524195407_create_table_blogs.down.sql  20240524195407_create_table_blogs.up.sql
src/: lib.rs  main.rs
src/controllers/: auth.rs  blog.rs  mod.rs  user.rs
src/infra/: cors.rs  mod.rs  routes.rs
src/models/: auth_error_schema.rs  auth_schema.rs  blog_schema.rs  claims_schema.rs  mod.rs  user_schema.rs
src/modules/: auth_controller.rs  blog_controller.rs  hash.rs  jwt.rs  jwt_usecase.rs  mod.rs  rand.rs  user_controller.rs
src/schemas/: auth.rs  claims.rs  mod.rs  user.rs
src/types/: types.rs
