[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
axum-util = "0.2.2"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
http = "1.1.0"
jsonwebtoken = "9.3.0"
mail-builder = "0.3.1"
mail-send = "0.4.7"
pwhash = "1.0.0"
rand = "0.8.5"
serde = { version = "1.0.202", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio-native-tls", "chrono"] }
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
